--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,8 +88,8 @@ dependencies {
 
 
     /*---Assertion and mocking---*/
-    testImplementation("io.mockk:mockk:$mockk_version")
-    testImplementation("io.mockk:mockk-agent-jvm:1.12.0")
+    testImplementation("io.mockk:mockk:1.12.3")
+    testImplementation("io.mockk:mockk-agent-jvm:1.12.3")
     testImplementation( "com.google.truth:truth:1.1.3")
 
     /*---Junit5 Test dependencies---*/
